--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "geist": "^1.3.0",
+    "immer": "^10.1.1",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
